--- a/public/css/app.css
+++ b/public/css/app.css
@@ -65,6 +65,16 @@
     margin: 0 auto;
 }
 
+#map {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.5;
+}
+
 @media screen and (max-width: 1216px) {
     .hero {
         min-height: 25vh !important;
