--- a/public/css/app.css
+++ b/public/css/app.css
@@ -46,6 +46,14 @@
     border-radius: 0;
 }
 
+.movies .card-image {
+    width: 100%;
+    height: 200px;
+    background-repeat: no-repeat !important;
+    background-size: cover !important;
+    background-position: center center !important;
+}
+
 .movies .card-content {
     padding: 1.2rem;
 }
